tests/parser/bad/cmodule-version-number-contract-name-lparen-with.scilla
scilla_version 0

(* upper case *)
contract Test
( Truth : Bool)
